--- a/frontend/src/app/clients/clients.component.html
+++ b/frontend/src/app/clients/clients.component.html
@@ -1,5 +1,18 @@
-<!-- <div class="container">
-    <div class="filter">
-        <button></button>
+<div class="container" align="center">
+    <button mat-button>
+        <mat-icon>filter_list</mat-icon>
+        Filter
+    </button>
+
+    <div class="clients-list">
+        <!-- *ngFor="let client of clients" -->
+        <mat-card>
+            <img mat-card-image src="assets/images/blank.jpg" alt="" >
+            <mat-card-content class="card-content">
+              <p>Name</p>
+              <p>PDV type</p>
+              <p>Sector</p>
+            </mat-card-content>
+        </mat-card>
     </div>
-</div> -->
+</div>
