--- a/frontend/src/app/clients/clients.component.css
+++ b/frontend/src/app/clients/clients.component.css
@@ -1,9 +1,31 @@
-.map-container{
-    width: 600px;
-    height: 500px;
-    /* left: 0;
-    right: 0;
-    bottom: 0; */
-    margin: 30px;
-    border: 2px solid #000;
+.container{
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    background-color: #F6F6F6;
+}
+.container button{
+    margin: 8px;
+    border-radius: 10px;
+    color: #646161;
+    border: 1px solid #959191;
+    width: 140px;
+}
+.container button mat-icon{
+    color: #27AE61;
+}
+
+.clients-list{
+
+}
+.clients-list mat-card{
+    width: 200px;
+    height: auto;  
+}
+.clients-list mat-card img{
+    padding: 8px;
+    box-sizing: border-box;
+}
+.card-content{
+    
 }
